--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,4 +1,51 @@
-img {
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.search_bar {
   width: 100%;
-  height: 100%;
+  height: 20px;
+  background-color: grey;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  padding: 5px;
+}
+
+@media (min-width: 600px) {
+  .grid_1-1-1-1 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .grid_1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 10px;
+  }
+  .grid_1-2 {
+    display: grid;
+    grid-template-columns: 0.1fr 2fr;
+  }
+  .menu {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
+
+.element1 {
+  display: grid;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.checkbox {
+  display: flex;
+  flex-direction: column;
 }
