--- a/styles/shop.css
+++ b/styles/shop.css
@@ -9,6 +9,17 @@ main {
   background-color: grey;
 }
 
+.sortér_efter {
+  display: flex;
+  align-self: flex-end;
+  padding: 1rem;
+}
+
+.type {
+  background-color: grey;
+  text-align: center;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -20,11 +31,13 @@ img {
   .grid_1-1-1-1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    padding: 1rem;
   }
   .grid_1-1-1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 10px;
+    padding: 1rem;
   }
   .grid_1-2 {
     display: grid;
@@ -45,7 +58,69 @@ img {
   flex-direction: column;
 }
 
+/* customzie the label (checkbox) */
 .checkbox {
-  display: flex;
-  flex-direction: column;
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* hide the browser's default */
+.checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
