--- a/styles/shop.css
+++ b/styles/shop.css
@@ -32,6 +32,7 @@ img {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 1rem;
+    gap: 10px;
   }
   .grid_1-1-1 {
     display: grid;
