--- a/styles/about.css
+++ b/styles/about.css
@@ -9,7 +9,8 @@ img {
   place-items: start;
   justify-content: center;
   font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Impact, Haettenschweiler, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 3rem;
   color: white;
 }
