--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -25,3 +25,11 @@ li {
   display: inline-block;
   padding: 40px;
 }
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
