--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -176,8 +176,10 @@ footer {
 
 p {
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
 
 h1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: white;
 }
