--- a/styles/shop.css
+++ b/styles/shop.css
@@ -5,7 +5,7 @@ main {
 
 .search_bar {
   width: 100%;
-  height: 3rem;
+  height: auto;
   background-color: grey;
 }
 
@@ -16,7 +16,7 @@ main {
 }
 
 .type {
-  background-color: grey;
+  background-color: #b27e25;
   text-align: center;
 }
 
@@ -51,6 +51,11 @@ img {
     grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
   }
+  .col1 {
+    line-height: 2;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
 }
 
 .element1 {
@@ -76,6 +81,8 @@ img {
   font-family: Arial, Helvetica, sans-serif;
   padding: 5px;
   text-align: center;
+  color: white;
+  line-height: 1.3rem;
 }
 
 /* hide the browser's default */
@@ -104,7 +111,7 @@ img {
 
 /* When the checkbox is checked, add a blue background */
 .checkbox input:checked ~ .checkmark {
-  background-color: #2196f3;
+  background-color: #b27e25;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
@@ -140,7 +147,7 @@ img {
 }
 
 button {
-  background-color: bisque;
+  background-color: #b27e25;
   border: none;
   padding: 15px 32px;
   text-align: center;
@@ -163,4 +170,14 @@ button {
   font-size: 1.2rem;
   font-weight: bold;
   color: white;
+}
+
+h2 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: white;
+}
+
+.p_bold {
+  font-weight: bold;
+  font-size: large;
 }
