--- a/styles/about.css
+++ b/styles/about.css
@@ -4,6 +4,7 @@ img {
   background-size: cover;
   background-position: 100%, 100%;
 }
+
 .overskrift {
   display: grid;
   place-items: start;
@@ -15,59 +16,276 @@ img {
   color: white;
 }
 
-/* første billede af katrine klinken og teskt oven på */
-.baggrund_container {
+@media (min-width: 375px) {
+  /* første billede af katrine klinken og teskt oven på */
+  .overskrift {
+    display: grid;
+    place-items: start;
+    justify-content: center;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    color: white;
+  }
+  .baggrund_container {
+    display: grid;
+    place-items: start;
+    padding: 20px;
+    margin: 2%;
+  }
+  img,
+  .tekst_sprite {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2%;
+    font-size: 150%;
+  }
+
+  h3 {
+    grid-area: 1 / 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2%;
+  }
+
+  .tekst_sprite {
+    margin: 5px;
+    position: relative;
+  }
+  /* Andet billede af honning med tekst oven på*/
+  .andenbaggrund_container {
+    display: grid;
+    place-items: start;
+    padding: 20px;
+    margin: 2%;
+  }
+  img,
+  .andentekst_sprite {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    font-size: 150%;
+  }
+
+  h3 {
+    grid-area: 1 / 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+  }
+
+  .andentekst_sprite {
+    margin: 5px;
+    position: relative;
+    color: white;
+  }
+  /*kolone med favoritter - overskrift + streg  og 4 medium billeder med tekst under*/
+
+  .grid_3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    margin-inline: 80px;
+  }
+
+  .main_3 h1 {
+    margin-block: 30px;
+    font-size: 2.5rem;
+    color: white;
+    display: grid;
+    place-items: start;
+    justify-content: center;
+  }
+
+  .main_3 h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 5px;
+    font-family: "Franklin Gothic light", "Arial Narrow", Arial, sans-serif;
+  }
+
+  .main_3 h3 {
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.5;
+  }
+
+  .main_3 h4 {
+    font-size: 2rem;
+  }
+
+  .main_3 p {
+    color: white;
+  }
+}
+@media (min-width: 600px) {
+  /* første billede af katrine klinken og teskt oven på */
+  .overskrift {
+    display: grid;
+    place-items: start;
+    justify-content: center;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    color: white;
+  }
+
+  .baggrund_container {
+    display: grid;
+    place-items: start;
+    padding: 20px;
+    margin: 2%;
+  }
+  img,
+  .tekst_sprite {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2%;
+    font-size: 150%;
+  }
+
+  h3 {
+    grid-area: 1 / 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2%;
+  }
+
+  .tekst_sprite {
+    margin: 5px;
+    position: relative;
+  }
+  /* Andet billede af honning med tekst oven på*/
+  .andenbaggrund_container {
+    display: grid;
+    place-items: start;
+    padding: 20px;
+    margin: 2%;
+  }
+  img,
+  .andentekst_sprite {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    font-size: 150%;
+  }
+
+  h3 {
+    grid-area: 1 / 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+  }
+
+  .andentekst_sprite {
+    margin: 5px;
+    position: relative;
+    color: white;
+  }
+}
+@media (min-width: 800px) {
+  /* første billede af katrine klinken og teskt oven på */
+  .overskrift {
+    display: grid;
+    place-items: start;
+    justify-content: center;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3rem;
+    color: white;
+  }
+
+  .baggrund_container {
+    display: grid;
+    place-items: start;
+    padding: 20px;
+    margin: 2%;
+  }
+  img,
+  .tekst_sprite {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2%;
+    grid-area: 1 / 1;
+    font-size: 150%;
+  }
+
+  h3 {
+    grid-area: 1 / 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2%;
+  }
+
+  .tekst_sprite {
+    margin: 5px;
+    position: relative;
+    padding-right: 60%;
+  }
+  /* Andet billede af honning med tekst oven på*/
+  .andenbaggrund_container {
+    display: grid;
+    place-items: start;
+    padding: 20px;
+    margin: 2%;
+  }
+  img,
+  .andentekst_sprite {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    grid-area: 1 / 1;
+    font-size: 150%;
+  }
+
+  h3 {
+    grid-area: 1 / 2;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+  }
+
+  .andentekst_sprite {
+    margin: 5px;
+    position: relative;
+    color: white;
+    padding-left: 60%;
+  }
+}
+
+/*kolone med favoritter - overskrift + streg  og 4 medium billeder med tekst under*/
+
+.grid_3 {
   display: grid;
-  place-items: start;
-  padding: 20px;
-  margin: 2%;
-}
-img,
-.tekst_sprite {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 2rem;
-  grid-area: 1 / 1;
-  font-size: 150%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2px;
+  margin-inline: 50px;
 }
 
-h3 {
-  grid-area: 1 / 2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 80%;
-}
-
-.tekst_sprite {
-  margin: 5px;
-  position: relative;
-  padding-right: 60%;
-}
-
-/* Andet billede af honninh med tekst oven på*/
-.andenbaggrund_container {
-  display: grid;
-  place-items: start;
-  padding: 20px;
-  margin: 2%;
-}
-img,
-.andentekst_sprite {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 2rem;
-  grid-area: 1 / 1;
-  font-size: 150%;
-}
-
-h3 {
-  grid-area: 1 / 2;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 80%;
-}
-
-.andentekst_sprite {
-  margin: 5px;
-  position: relative;
-  padding-left: 60%;
+.main_3 h1 {
+  margin-block: 30px;
+  font-size: 2.5rem;
   color: white;
+  display: grid;
+  place-items: start;
+  justify-content: center;
+}
+
+.main_3 h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 5px;
+  font-family: "Franklin Gothic light", "Arial Narrow", Arial, sans-serif;
+}
+
+.main_3 h3 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.main_3 h4 {
+  font-size: 2rem;
+}
+
+.main_3 p {
+  color: white;
+}
+
+.col {
+  width: 90%;
 }
