--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -80,108 +80,109 @@ header a:active {
 }
 
 /* _____________________footer____________________________ */
+@media (min-width: 375px) {
+  footer {
+    width: 100vw;
+    display: block;
+    overflow: hidden;
+    padding: 40px 0px;
+    margin-top: 150px;
+    box-sizing: border-box;
+    background-color: white;
+  }
 
-footer {
-  width: 100vw;
-  display: block;
-  overflow: hidden;
-  padding: 40px 0px;
-  margin-top: 150px;
-  box-sizing: border-box;
-  background-color: white;
-}
+  .inner_footer {
+    display: block;
+    margin: 0 auto;
+    width: 1300px;
+    height: 100%;
+  }
 
-.inner_footer {
-  display: block;
-  margin: 0 auto;
-  width: 1300px;
-  height: 100%;
-}
+  .inner_footer .footer_logo_container {
+    width: 25%;
+    float: left;
+    height: 100%;
+    display: block;
+  }
 
-.inner_footer .footer_logo_container {
-  width: 25%;
-  float: left;
-  height: 100%;
-  display: block;
-}
+  .inner_footer .footer_logo_container img {
+    width: 80%;
+    height: auto;
+    margin: 0px;
+  }
 
-.inner_footer .footer_logo_container img {
-  width: 80%;
-  height: auto;
-  margin: 0px;
-}
+  .inner_footer .footer_third {
+    width: calc(21.66667 - 20px);
+    margin-right: 50px;
+    float: left;
+    height: 100%;
+  }
 
-.inner_footer .footer_third {
-  width: calc(21.66667 - 20px);
-  margin-right: 50px;
-  float: left;
-  height: 100%;
-}
+  .inner_footer .footer_third h1 {
+    font-family: arial;
+    font-size: 22px;
+    color: black;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
 
-.inner_footer .footer_third h1 {
-  font-family: arial;
-  font-size: 22px;
-  color: black;
-  display: block;
-  width: 100%;
-  margin-bottom: 20px;
-}
+  .inner_footer .footer_third h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-style: italic;
+  }
 
-.inner_footer .footer_third h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  font-style: italic;
-}
+  .inner_footer .footer_third a {
+    font-family: arial;
+    font-size: 15px;
+    color: black;
+    display: block;
+    width: 100%;
+    padding: 5px;
+    margin-right: 120px;
+    /* padding kan stackes, margin kan ikke */
+  }
 
-.inner_footer .footer_third a {
-  font-family: arial;
-  font-size: 15px;
-  color: black;
-  display: block;
-  width: 100%;
-  padding: 5px;
-  margin-right: 120px;
-  /* padding kan stackes, margin kan ikke */
-}
+  .inner_footer .footer_third p {
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-.inner_footer .footer_third p {
-  font-family: Arial, Helvetica, sans-serif;
-}
+  .inner_footer .footer_third p span {
+    font-style: italic;
+  }
 
-.inner_footer .footer_third p span {
-  font-style: italic;
-}
+  .inner_footer .footer_sociale {
+    display: block;
+    position: sticky;
+  }
 
-.inner_footer .footer_sociale {
-  display: block;
-  position: sticky;
-}
+  .inner_footer .footer_sociale img {
+    width: 5%;
+    padding: 0px;
+    bottom: 0px;
+    margin-top: 200px;
+  }
 
-.inner_footer .footer_sociale img {
-  width: 5%;
-  padding: 0px;
-  bottom: 0px;
-  margin-top: 200px;
-}
-
-/* .footer_sociale {
+  /* .footer_sociale {
 
 } */
 
-/* ________________________________________________________________ */
+  /* ________________________________________________________________ */
 
-p {
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-}
+  p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+  }
 
-h1 {
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  color: white;
+  h1 {
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    color: white;
+  }
 }
 
 /* ------------------ BURGERMENU ------------------------------------*/
-
+/*
 .toggle-btn {
   background: transparent;
   border: none;
@@ -189,7 +190,7 @@ h1 {
   font-size: 1.1rem;
   cursor: pointer;
 
-  display: none; /* skjul knappen som standard*/
+  display: none; /* skjul knappen som standard
 }
 .toggle-btn {
   color: black;
@@ -200,15 +201,17 @@ h1 {
 @media (max-width: 600px) {
   .toggle-btn {
     display: block; /* vis knappen, når viewporten maksimalt er 600 px */
-  }
+
+/*
   .menu {
     display: contents; /* fjern "main.-menu"-boksen fra ligningen, når viewporten maksimalt er 600px men behold børnene så disse deltager i flex-kontekten*/
-  }
+
+/*
   .menu ul {
-    display: none; /*fjern menu-listen som standard */
+    display: none; 
   }
   .menu.shown ul {
-    /*vis menu-listen, når klassen "shown" er til stede */
+
     position: absolute;
     border-top: 1px solid black;
     padding-top: 1rem;
@@ -220,3 +223,4 @@ h1 {
     left: 20px;
   }
 }
+*/
