--- a/styles/abonnement.css
+++ b/styles/abonnement.css
@@ -7,5 +7,35 @@ main {
   .grid_1-1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1rem;
   }
+  .col {
+    border: 1;
+    border-color: black;
+    background-color: #716252;
+    text-align: center;
+  }
+}
+
+button {
+  background-color: #b27e25;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 25px;
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  text-align: center;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
