--- a/styles/abonnement.css
+++ b/styles/abonnement.css
@@ -26,6 +26,7 @@ button {
   display: inline-block;
   font-size: 12px;
   border-radius: 25px;
+  margin-bottom: 1rem;
 }
 
 h2 {
@@ -36,6 +37,11 @@ h2 {
 
 img {
   max-width: 100%;
+  width: 500px;
   height: auto;
   object-fit: cover;
+}
+
+h1 {
+  text-align: center;
 }
