--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -27,6 +27,10 @@ body {
   margin: 0 auto;
   /* #b5a89c; */
 }
+
+.video_forside {
+  margin: 30px;
+}
 /* ______________________fonte og baggrund_____________________________ */
 
 /* __________________________header___________________________________ */
