--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -31,6 +31,11 @@ body {
 .video_forside {
   margin: 30px;
 }
+
+video{
+  height: auto;
+  width: 100%;
+}
 /* ______________________fonte og baggrund_____________________________ */
 
 /* __________________________header___________________________________ */
