--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -28,11 +28,11 @@ body {
   /* #b5a89c; */
 }
 
-<<<<<<< HEAD .video_forside {
+.video_forside {
   margin: 30px;
 }
 
-=======>>>>>>>685d4bdbd0d1a453d1caab51c4dc0e5489624637 video {
+video {
   height: auto;
   width: 100%;
   margin: 20px;
