--- a/styles/about.css
+++ b/styles/about.css
@@ -23,7 +23,7 @@ img {
     place-items: start;
     justify-content: center;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
     font-size: 2rem;
     color: white;
   }
@@ -109,7 +109,7 @@ img {
     font-size: 1.5rem;
     font-weight: 700;
     margin-top: 5px;
-    font-family: "Franklin Gothic light", "Arial Narrow", Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   .main_3 h3 {
@@ -133,7 +133,7 @@ img {
     place-items: start;
     justify-content: center;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
     font-size: 2rem;
     color: white;
   }
@@ -196,7 +196,7 @@ img {
     place-items: start;
     justify-content: center;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
     font-size: 4rem;
     color: white;
   }
