--- a/styles/fælles.css
+++ b/styles/fælles.css
@@ -196,79 +196,137 @@ video {
 
 /* _____________________footer____________________________ */
 
-footer {
-  width: 100%;
-  display: flex;
-  overflow: hidden;
-  padding: 40px 0px;
-  margin-top: 150px;
-  box-sizing: border-box;
-  background-color: white;
-  position: absolute;
-  height: auto;
+@media (min-width: 600px) {
+  footer {
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    padding: 40px 0px;
+    margin-top: 150px;
+    box-sizing: border-box;
+    background-color: white;
+    position: absolute;
+    height: auto;
+  }
+
+  .inner_footer {
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 1300px;
+    height: 100%;
+  }
+
+  .inner_footer .footer_logo_container {
+    width: 25%;
+    float: left;
+    height: 100%;
+    display: flex;
+  }
+
+  .inner_footer .footer_logo_container img {
+    width: 80%;
+    height: auto;
+    margin: 0px;
+  }
+
+  .inner_footer .footer_third {
+    width: 200px;
+    margin: 20px;
+    float: left;
+    height: 100%;
+  }
+
+  .inner_footer .footer_third h1 {
+    font-family: arial;
+    font-size: 15px;
+    color: black;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .inner_footer .footer_third h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-style: italic;
+  }
+
+  .inner_footer .footer_third a {
+    font-family: arial;
+    font-size: 15px;
+    color: black;
+    display: flex;
+    width: 100%;
+    padding: 5px;
+    margin-right: 120px;
+
+    /* padding kan stackes, margin kan ikke */
+  }
+
+  .inner_footer .footer_third p {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .inner_footer .footer_third p span {
+    font-style: italic;
+  }
 }
 
-.inner_footer {
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  width: 1300px;
-  height: 100%;
+/* mobil */
+@media (max-width: 599px) {
+  footer {
+    display: block;
+    grid-template-columns: 1fr;
+    margin-top: 40px;
+  }
+
+  .inner_footer .footer_third {
+    width: 200px;
+    margin: 20px;
+    float: left;
+    height: 100%;
+  }
+
+  .inner_footer .footer_third p {
+    color: black;
+  }
+
+  .inner_footer .footer_third a {
+    font-family: arial;
+    font-size: 15px;
+    color: black;
+    display: flex;
+    width: 100%;
+    padding: 5px;
+    margin-right: 120px;
+
+    /* padding kan stackes, margin kan ikke */
+  }
+
+  .inner_footer .footer_third h1 {
+    font-family: arial;
+    font-size: 15px;
+    color: black;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .inner_footer .footer_third h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    font-style: italic;
+    color: black;
+  }
 }
 
-.inner_footer .footer_logo_container {
-  width: 25%;
-  float: left;
-  height: 100%;
-  display: flex;
-}
-
-.inner_footer .footer_logo_container img {
-  width: 80%;
-  height: auto;
-  margin: 0px;
-}
-
-.inner_footer .footer_third {
-  width: 200px;
-  margin: 20px;
-  float: left;
-  height: 100%;
-}
-
-.inner_footer .footer_third h1 {
-  font-family: arial;
-  font-size: 15px;
-  color: black;
-  display: block;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.inner_footer .footer_third h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  font-style: italic;
-}
-
-.inner_footer .footer_third a {
-  font-family: arial;
-  font-size: 15px;
-  color: black;
-  display: flex;
-  width: 100%;
-  padding: 5px;
-  margin-right: 120px;
-  /* padding kan stackes, margin kan ikke */
-}
-
-.inner_footer .footer_third p {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.inner_footer .footer_third p span {
-  font-style: italic;
-}
+/* desktop */
+/* @media (min-width: 600px) {
+  footer {
+    background-color: yellow;
+  }
+} */
 
 /* ________________________________________________________________ */
 
